<resources>
    <string name="app_name">HVACForms.11.19.15.2</string>
    <string name="action_settings">Settings</string>
    <string name="rand_str">Random String</string>
    <string name="name_str">Name (click to enter text)</string>
    <string name="address_str">Address (click to enter text)" </string>
    <string name="phone_str">Phone number (click to enter text)" </string>
    <string name="system_type_str">Please indicate system type: " </string>
    <string name="type1">"Type 1" </string>
    <string name="type2">"Type 2" </string>
    <string name="type3">"Type 3" </string>
    <string name="etName">"Type 3" </string>
    <string name="user_name">Name (click to enter text)</string>
    <string name="place_address">Address (click to enter text)</string>
    <string name="user_number">Phone number (click to enter text)</string>
    <string name="system_type">Please indicate system type:</string>
    <string name="system_type1">Type 1</string>
    <string name="system_type2">Type 2</string>
    <string name="system_type3">Type 3</string>
    <string name="mutiple_system">Are there multiple systems?</string>
    <string name="system_location">Where is the new system located? (click to enter text)</string>
    <string name="multiple_yes">Yes</string>
    <string name="multiple_no">No</string>
    <string name="airhandle_furnace">Airhandler / Furnace</string>
    <string name="btu">BTUs (click to enter text)</string>
    <string name="furnace_dims">Furnace Dimensions (click to enter text)</string>
    <string name="closet_dims">Closet Dimensions (click to enter text)</string>
    <string name="door_width">Door Width (click to enter text)</string>
    <string name="platform_return_air">Platform Return Air Type</string>
    <string name="platform_air_type1">Platform Return Air Type1</string>
    <string name="platform_air_type2">Platform Return Air Type2</string>
    <string name="platform_air_type3">Platform Return Air Type3</string>
    <string name="flu_pipe_type">Flu pipe Type</string>
    <string name="flu1">Flu Pipe Type 1</string>
    <string name="flu2">Flu Pipe Type 2</string>
    <string name="flu3">Flu Pipe Type 3</string>
    <string name="flu_other">Flu Pipe Type Other</string>
    <string name="comb_vent_type">Combustion Vent Type</string>
    <string name="comv1">Combustion Vent Type1</string>
    <string name="comb_vent2">Combustion Vent Type2</string>
    <string name="comb_vent3">Combustion Vent Type3</string>
    <string name="floor_cond">Floor Condition:</string>
    <string name="floor_ok">Floors okay</string>
    <string name="floor_bring_wood">Bring wood</string>
    <string name="condensate_drain_cond">Condensate Drain Condition:</string>
    <string name="cond_drain_ok">Condensate Drain Ok</string>
    <string name="cond_drain_replace">Replace Condensate Drain</string>
    <string name="cond_weight">Condenser Weight</string>
    <string name="tons1_5">1.5 Tons</string>
    <string name="ton_3">3 Tons</string>
    <string name="ton_4">4 Tons</string>
    <string name="ton_5">5 Tons</string>
    <string name="pad_size">Pad Size (click to enter text)</string>
    <string name="breaker">Breaker (click to enter text)</string>
    <string name="existing_condenser_condition">Existing Condenser Condition</string>
    <string name="disconnect_ok">Disconnect OK</string>
    <string name="replace_disconnect">Replace Disconnect</string>
    <string name="line_set_size">Line Set Size (click to enter text)</string>
    <string name="condenser_approx_length">Condenser Approximate Length (click to enter text)</string>
    <string name="condensate_drain_condit">Condensate Drain Condition:</string>
    <string name="duct1">Duct Type 1</string>
    <string name="duct2">Duct Type 2</string>
    <string name="duct_size">Size of return duct: (click to enter text)</string>
    <string name="grill_size">Size of return grill: (click to enter text)</string>
    <string name="filter_loc">Filter Location</string>
    <string name="filter_1">filter location 1</string>
    <string name="filter2">Filter Location 2</string>
    <string name="supply_vent_no">Number of supply vents (click to enter text)</string>
    <string name="test_seal_interest">Are they interested in Test and seal?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="load_calcs_req">ARE LOAD CALCULATIONS REQURED?</string>
    <string name="return_air">Total Measured return air (click to enter text)</string>
    <string name="system_performance">Systemperformace, select all that apply</string>
    <string name="maintain_temp">Can\'t maintain temperature</string>
    <string name="high_bills">High bills</string>
    <string name="noisy">Noisy</string>
    <string name="cycles_frequently">Cycles frequently</string>
    <string name="change_thermostat">Change thermostat</string>
    <string name="other_issues_notes">Enter any other issues or notes (click to enter text)</string>
    <string name="submit">Submit</string>
    <string name="problem_rooms">Problem Rooms</string>
    <string name="problem_rooms1">Problem Rooms</string>
    <string name="split_system">Split System</string>
    <string name="package_unit">Package Unit</string>
    <string name="roof_type">Type of Roof</string>
    <string name="stand_size">Stand Size</string>
    <string name="elbows">Elbows</string>
    <string name="elbowheighthint">Height</string>
    <string name="inchesby">Inches By</string>
    <string name="inches">Inches</string>
    <string name="width">Width</string>
    <string name="downshot">Down Shot</string>
    <string name="pitch">Pitch of Roof</string>
    <string name="pad_dimension">Pad Dimension</string>
    <string name="existing_condenser_approx_length">Existing Condenser Approx Length</string>


</resources>
